<resources>
    <string name="app_name">Doodlz2</string>
    <string name="action_settings">Settings</string>
    <string name="button_erase">Erase Image</string>
    <string name="button_set_color">Set Color</string>
    <string name="button_set_line_width">Set Line Width</string>
    <string name="line_imageview_description">This displays the line thickness</string>
    <string name="item_color">Item Color</string>
    <string name="line_width">Line Width</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="print">Print</string>
    <string name="LabelAlpha">Alpha</string>
    <string name="LabelGreen">Green</string>
    <string name="LabelRed">Red</string>
    <string name="LabelBlue">Blue</string>
    <string name="description">Description</string>

</resources>
